--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -50,7 +50,7 @@
   --shadow-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   --shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
   /* typography */
-  --defaultFontSize: 87.5%;
+  /* --defaultFontSize: 87.5%; */
   --headingFont: 'Inconsolata', monospace;
   --bodyFont: 'Montserrat', sans-serif;
   --smallText: 0.8em;
@@ -64,67 +64,6 @@
   --max-width: 1120px;
   --fixed-width: 600px;
 }
-/* html {
-  font-size: var(--defaultFontSize);
-}
-@media only screen and (min-width: 576px) {
-  :root {
-    --defaultFontSize: 100%;
-  }
-}
-@media only screen and (min-width: 768px) {
-  :root {
-    --defaultFontSize: 112.5%;
-  }
-} */
-
-body {
-  /* background: var(--backgroundColor); */
-  /* color: var(--textColor);
-  font-family: var(--bodyFont); */
-  font-weight: 400;
-  line-height: 1.75;
-}
-
-/* p {
-  margin: 0;
-  margin-bottom: 1rem;
-  max-width: 40em;
-} */
-
-/* h1,
-h2,
-h3,
-h4,
-h5 {
-  margin: 0;
-  margin-bottom: 1.38rem;
-  font-family: var(--headingFont);
-  font-weight: 400;
-  line-height: 1.3;
-  text-transform: capitalize;
-  letter-spacing: var(--letterSpacing);
-}
-
-h1 {
-  font-size: 3.052rem;
-}
-
-h2 {
-  font-size: 2.441rem;
-}
-
-h3 {
-  font-size: 1.953rem;
-}
-
-h4 {
-  font-size: 1.563rem;
-}
-
-h5 {
-  font-size: 1.25rem;
-} */
 
 small,
 .text-small {
@@ -134,11 +73,7 @@ small,
 a {
   text-decoration: none;
 }
-/* .img {
-  width: 100%;
-  display: block;
-  object-fit: cover;
-} */
+
 .form {
   width: 100%;
   background: var(--white);
@@ -183,43 +118,6 @@ hr {
   border-top: var(--line);
 }
 
-/* button,
-.btn {
-  cursor: pointer;
-  appearance: none;
-  color: var(--white);
-  background: var(--primary-500);
-  border: none;
-  border-radius: var(--borderRadius);
-  letter-spacing: var(--letterSpacing);
-  padding: 0.375rem 0.75rem;
-  box-shadow: var(--shadow-1);
-  transition: var(--transition);
-  text-transform: capitalize;
-}
-button:hover,
-.btn:hover {
-  color: var(--white);
-  background: var(--primary-700);
-  box-shadow: var(--shadow-2);
-}
-button.small {
-  padding: 0.25rem 0.5rem;
-  font-size: var(--smallText);
-}
-button.hipster {
-  color: var(--primary-500);
-  background: var(--primary-50);
-  box-shadow: var(--shadow-1);
-}
-button.hipster:hover {
-  background: var(--primary-100);
-  box-shadow: var(--shadow-2);
-}
-button.block {
-  width: 100%;
-} */
-
 /* Basic Classes */
 .alert {
   padding: 0.375rem 0.75rem;
@@ -237,9 +135,6 @@ button.block {
   background-color: var(--red-light);
 }
 
-/* .container {
-  padding: 5rem 0;
-} */
 .container-center {
   width: 90vw;
   max-width: var(--max-width);
@@ -250,9 +145,6 @@ button.block {
   max-width: var(--max-width);
   margin: 0 auto;
 }
-/* .page {
-  min-height: calc(100vh - (6rem + 4rem));
-} */
 
 .title {
   text-align: center;
@@ -721,11 +613,6 @@ form > *:last-child {
   font-size: 1rem;
 }
 
-.post-hero .about-img {
-  /* height: auto; */
-  /* width: 100%; */
-}
-
 .recipe-hero .about-img {
   height: 400px;
 }
@@ -808,6 +695,6 @@ form > *:last-child {
 }
 
 .single-ingredient {
-  border-bottom: 1px solid var(--grey-500);
+  border-bottom: 1px solid var(--grey-800);
   padding-bottom: 0.75rem;
 }
